Parser_Generated/AsmParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Asm.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591


#pragma warning disable CS3021 // Type or member does not need a CLSCompliant attribute because the assembly does not have a CLSCompliant attribute

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class AsmParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, LITERAL_HEX=20, LITERAL_DEC=21, LITERAL_STRING=22, 
		IDENTIFIER=23, MUL_OP=24, ADD_OP=25, NOT_OP=26, NEW_LINE=27, WHITESPACE=28, 
		LINE_COMMENT=29;
	public const int
		RULE_prog = 0, RULE_statement = 1, RULE_argument = 2, RULE_data_byte_list = 3, 
		RULE_data_byte = 4, RULE_data_word_list = 5, RULE_expr = 6, RULE_literal = 7;
	public static readonly string[] ruleNames = {
		"prog", "statement", "argument", "data_byte_list", "data_byte", "data_word_list", 
		"expr", "literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'EQU'", "'equ'", "'DB'", "'db'", "'FCB'", "'fcb'", "'FCC'", "'fcc'", 
		"'DW'", "'dw'", "'FDB'", "'fdb'", "':'", "'#'", "','", "'('", "')'", "'&&'", 
		"'||'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "LITERAL_HEX", "LITERAL_DEC", 
		"LITERAL_STRING", "IDENTIFIER", "MUL_OP", "ADD_OP", "NOT_OP", "NEW_LINE", 
		"WHITESPACE", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Asm.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public AsmParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 19;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << IDENTIFIER) | (1L << NEW_LINE))) != 0)) {
				{
				{
				State = 16; statement();
				}
				}
				State = 21;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StmtEquContext : StatementContext {
		public IToken name;
		public ExprContext value;
		public ITerminalNode NEW_LINE() { return GetToken(AsmParser.NEW_LINE, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(AsmParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StmtEquContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterStmtEqu(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitStmtEqu(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtEqu(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtLabelContext : StatementContext {
		public ITerminalNode IDENTIFIER() { return GetToken(AsmParser.IDENTIFIER, 0); }
		public StmtLabelContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterStmtLabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitStmtLabel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtLabel(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtBlankContext : StatementContext {
		public ITerminalNode NEW_LINE() { return GetToken(AsmParser.NEW_LINE, 0); }
		public StmtBlankContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterStmtBlank(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitStmtBlank(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtBlank(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtOpcodeContext : StatementContext {
		public IToken opcode;
		public ITerminalNode NEW_LINE() { return GetToken(AsmParser.NEW_LINE, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(AsmParser.IDENTIFIER, 0); }
		public ArgumentContext argument() {
			return GetRuleContext<ArgumentContext>(0);
		}
		public StmtOpcodeContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterStmtOpcode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitStmtOpcode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtOpcode(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtDataContext : StatementContext {
		public Data_byte_listContext db;
		public Data_word_listContext dw;
		public ITerminalNode NEW_LINE() { return GetToken(AsmParser.NEW_LINE, 0); }
		public Data_byte_listContext data_byte_list() {
			return GetRuleContext<Data_byte_listContext>(0);
		}
		public Data_word_listContext data_word_list() {
			return GetRuleContext<Data_word_listContext>(0);
		}
		public StmtDataContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterStmtData(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitStmtData(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtData(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			State = 55;
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new StmtBlankContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 22; Match(NEW_LINE);
				}
				break;
			case 2:
				_localctx = new StmtEquContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 23; ((StmtEquContext)_localctx).name = Match(IDENTIFIER);
				State = 24;
				_la = TokenStream.La(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 25; ((StmtEquContext)_localctx).value = expr(0);
				State = 26; Match(NEW_LINE);
				}
				break;
			case 3:
				_localctx = new StmtDataContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 28;
				_la = TokenStream.La(1);
				if ( !(_la==T__2 || _la==T__3) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 29; ((StmtDataContext)_localctx).db = data_byte_list();
				State = 30; Match(NEW_LINE);
				}
				break;
			case 4:
				_localctx = new StmtDataContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 32;
				_la = TokenStream.La(1);
				if ( !(_la==T__4 || _la==T__5) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 33; ((StmtDataContext)_localctx).db = data_byte_list();
				State = 34; Match(NEW_LINE);
				}
				break;
			case 5:
				_localctx = new StmtDataContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 36;
				_la = TokenStream.La(1);
				if ( !(_la==T__6 || _la==T__7) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 37; ((StmtDataContext)_localctx).db = data_byte_list();
				State = 38; Match(NEW_LINE);
				}
				break;
			case 6:
				_localctx = new StmtDataContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 40;
				_la = TokenStream.La(1);
				if ( !(_la==T__8 || _la==T__9) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 41; ((StmtDataContext)_localctx).dw = data_word_list();
				State = 42; Match(NEW_LINE);
				}
				break;
			case 7:
				_localctx = new StmtDataContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 44;
				_la = TokenStream.La(1);
				if ( !(_la==T__10 || _la==T__11) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 45; ((StmtDataContext)_localctx).dw = data_word_list();
				State = 46; Match(NEW_LINE);
				}
				break;
			case 8:
				_localctx = new StmtOpcodeContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 48; ((StmtOpcodeContext)_localctx).opcode = Match(IDENTIFIER);
				State = 50;
				_la = TokenStream.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__15) | (1L << LITERAL_HEX) | (1L << LITERAL_DEC) | (1L << IDENTIFIER) | (1L << ADD_OP) | (1L << NOT_OP))) != 0)) {
					{
					State = 49; argument();
					}
				}

				State = 52; Match(NEW_LINE);
				}
				break;
			case 9:
				_localctx = new StmtLabelContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 53; Match(IDENTIFIER);
				State = 54; Match(T__12);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentContext : ParserRuleContext {
		public ArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argument; } }
	 
		public ArgumentContext() { }
		public virtual void CopyFrom(ArgumentContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ArgumentImmediateContext : ArgumentContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ArgumentImmediateContext(ArgumentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterArgumentImmediate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitArgumentImmediate(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgumentImmediate(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ArgumentExtendedOrDirectContext : ArgumentContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ArgumentExtendedOrDirectContext(ArgumentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterArgumentExtendedOrDirect(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitArgumentExtendedOrDirect(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgumentExtendedOrDirect(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentContext argument() {
		ArgumentContext _localctx = new ArgumentContext(Context, State);
		EnterRule(_localctx, 4, RULE_argument);
		try {
			State = 60;
			switch (TokenStream.La(1)) {
			case T__15:
			case LITERAL_HEX:
			case LITERAL_DEC:
			case IDENTIFIER:
			case ADD_OP:
			case NOT_OP:
				_localctx = new ArgumentExtendedOrDirectContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 57; expr(0);
				}
				break;
			case T__13:
				_localctx = new ArgumentImmediateContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 58; Match(T__13);
				State = 59; expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Data_byte_listContext : ParserRuleContext {
		public Data_byte_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_data_byte_list; } }
	 
		public Data_byte_listContext() { }
		public virtual void CopyFrom(Data_byte_listContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DataByteListContext : Data_byte_listContext {
		public Data_byteContext[] data_byte() {
			return GetRuleContexts<Data_byteContext>();
		}
		public Data_byteContext data_byte(int i) {
			return GetRuleContext<Data_byteContext>(i);
		}
		public DataByteListContext(Data_byte_listContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterDataByteList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitDataByteList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDataByteList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Data_byte_listContext data_byte_list() {
		Data_byte_listContext _localctx = new Data_byte_listContext(Context, State);
		EnterRule(_localctx, 6, RULE_data_byte_list);
		int _la;
		try {
			_localctx = new DataByteListContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; data_byte();
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__14) {
				{
				{
				State = 63; Match(T__14);
				State = 64; data_byte();
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Data_byteContext : ParserRuleContext {
		public Data_byteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_data_byte; } }
	 
		public Data_byteContext() { }
		public virtual void CopyFrom(Data_byteContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DataByteExprContext : Data_byteContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public DataByteExprContext(Data_byteContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterDataByteExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitDataByteExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDataByteExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DataByteStringContext : Data_byteContext {
		public ITerminalNode LITERAL_STRING() { return GetToken(AsmParser.LITERAL_STRING, 0); }
		public DataByteStringContext(Data_byteContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterDataByteString(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitDataByteString(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDataByteString(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Data_byteContext data_byte() {
		Data_byteContext _localctx = new Data_byteContext(Context, State);
		EnterRule(_localctx, 8, RULE_data_byte);
		try {
			State = 72;
			switch (TokenStream.La(1)) {
			case T__15:
			case LITERAL_HEX:
			case LITERAL_DEC:
			case IDENTIFIER:
			case ADD_OP:
			case NOT_OP:
				_localctx = new DataByteExprContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 70; expr(0);
				}
				break;
			case LITERAL_STRING:
				_localctx = new DataByteStringContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 71; Match(LITERAL_STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Data_word_listContext : ParserRuleContext {
		public Data_word_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_data_word_list; } }
	 
		public Data_word_listContext() { }
		public virtual void CopyFrom(Data_word_listContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DataWordListContext : Data_word_listContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public DataWordListContext(Data_word_listContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterDataWordList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitDataWordList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDataWordList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Data_word_listContext data_word_list() {
		Data_word_listContext _localctx = new Data_word_listContext(Context, State);
		EnterRule(_localctx, 10, RULE_data_word_list);
		int _la;
		try {
			_localctx = new DataWordListContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; expr(0);
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__14) {
				{
				{
				State = 75; Match(T__14);
				State = 76; expr(0);
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ExprParensContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ExprParensContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterExprParens(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitExprParens(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprParens(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprIdentifierContext : ExprContext {
		public ITerminalNode IDENTIFIER() { return GetToken(AsmParser.IDENTIFIER, 0); }
		public ExprIdentifierContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterExprIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitExprIdentifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprUnaryOpContext : ExprContext {
		public IToken oper;
		public ExprContext rhs;
		public ITerminalNode ADD_OP() { return GetToken(AsmParser.ADD_OP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode NOT_OP() { return GetToken(AsmParser.NOT_OP, 0); }
		public ExprUnaryOpContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterExprUnaryOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitExprUnaryOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprUnaryOp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprBinOpContext : ExprContext {
		public ExprContext lhs;
		public IToken oper;
		public ExprContext rhs;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode MUL_OP() { return GetToken(AsmParser.MUL_OP, 0); }
		public ITerminalNode ADD_OP() { return GetToken(AsmParser.ADD_OP, 0); }
		public ExprBinOpContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterExprBinOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitExprBinOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprBinOp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprLiteralContext : ExprContext {
		public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public ExprLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.EnterExprLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAsmListener typedListener = listener as IAsmListener;
			if (typedListener != null) typedListener.ExitExprLiteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAsmVisitor<TResult> typedVisitor = visitor as IAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}
